WS/k8s.ingress/path-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ambassador
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: hello-world
              servicePort: 3000
          - path: /dog
            backend:
              serviceName: dogpic-service
              servicePort: 3000
