WS/k8s.ingress/single-service-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ambassador
  name: my-ingress
spec:
  backend:
    serviceName: hello-world
    servicePort: 3000
